# discord-getYouTubeChat

./: .gitignore  README.md  discord-getYouTubeChat.py  pyproject.toml  requirements.txt  start.sh
cogs/: getYouTubeChatCog.py
modules/: settings.py
modules/files/: .env.sample
