[tool.poetry]
name = "discord-getYouTubeChat.py"
version = "0.1.0"
description = ""
authors = ["tetsuya-ki <64536338+tetsuya-ki@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.7.3"
python-dotenv = "^0.19.2"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
